statum-macros/tests/ui/invalid_validators_alias_wrong_payload.stderr
error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:55:2
   |
55 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_validators_alias_wrong_payload.rs`

error[E0308]: mismatched types
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:36:1
   |
36 | #[validators(TaskMachine)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Option<Progress>`, found `Option<()>`
...
47 |     fn is_in_progress(&self) -> statum::Result<()> {
   |        -------------- arguments to this function are incorrect
   |
   = note: expected enum `Option<Progress>`
              found enum `Option<()>`
note: function defined here
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:47:8
   |
36 | #[validators(TaskMachine)]
   | --------------------------
   | |
   | in this attribute macro expansion
...
47 |     fn is_in_progress(&self) -> statum::Result<()> {
   |        ^^^^^^^^^^^^^^
   = note: this error originates in the macro `__statum_emit_task_machine_validator_build_variant` which comes from the expansion of the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:36:1
   |
36 | #[validators(TaskMachine)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | expected `Progress`, found `()`
   | arguments to this method are incorrect
   |
note: method defined here
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:27:1
   |
27 | #[machine]
   | ^^^^^^^^^^
   = note: this error originates in the macro `__statum_emit_task_machine_validator_build_variant` which comes from the expansion of the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:36:1
   |
36 | #[validators(TaskMachine)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Option<Progress>`, found `Option<()>`
...
47 |     fn is_in_progress(&self) -> statum::Result<()> {
   |        -------------- arguments to this function are incorrect
   |
   = note: expected enum `Option<Progress>`
              found enum `Option<()>`
note: function defined here
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:47:8
   |
36 | #[validators(TaskMachine)]
   | --------------------------
   | |
   | in this attribute macro expansion
...
47 |     fn is_in_progress(&self) -> statum::Result<()> {
   |        ^^^^^^^^^^^^^^
   = note: this error originates in the macro `__statum_emit_task_machine_validator_report_variant` which comes from the expansion of the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:36:1
   |
36 | #[validators(TaskMachine)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | expected `Progress`, found `()`
   | arguments to this method are incorrect
   |
note: method defined here
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:27:1
   |
27 | #[machine]
   | ^^^^^^^^^^
   = note: this error originates in the macro `__statum_emit_task_machine_validator_report_variant` which comes from the expansion of the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)
